[project]
name = "ComfyUI-Simple-Iterator"
version = "0.1.0"
description = "ComfyUI custom nodes for one-sample-per-run iteration across image, video, and text sources."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "numpy>=1.24",
  "Pillow>=10.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[tool.comfy]
PublisherId = "simple-iterator"
DisplayName = "ComfyUI-Simple-Iterator"
Icon = ""
